diff btn reconstructing nd forcasting

--- a/notebook/autoencoder.ipynb
+++ b/notebook/autoencoder.ipynb
@@ -823,6 +823,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "a7786c6c",
+   "metadata": {},
+   "source": [
+    "lstm layer of 64 units"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "54116053",
    "metadata": {},
    "source": [
@@ -1486,12 +1494,56 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6a8c5852",
+   "cell_type": "markdown",
+   "id": "d8fdeed1",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "Autoencoder (Reconstruction)\n",
+    "\n",
+    "If you're training an Autoencoder for anomaly detection, this is the correct version:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "87a77381",
+   "metadata": {},
+   "source": [
+    "model.fit(X_train_scaled, X_train_scaled, epochs=10, batch_size=32)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bf266327",
+   "metadata": {},
+   "source": [
+    "Autoencoders learn to reconstruct the same input, so both X and y are the same. After training, high reconstruction error → anomaly."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "195a1758",
+   "metadata": {},
+   "source": [
+    "Sequence Prediction / Forecasting (Time Series)\n",
+    "\n",
+    "If you're trying to predict the next timestep, then this is correct:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7c644266",
+   "metadata": {},
+   "source": [
+    "model.fit(X_train_scaled[:-1], X_train_scaled[1:], epochs=10, batch_size=32)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "74e430be",
+   "metadata": {},
+   "source": [
+    "You're training the model to predict the next timestep (like LSTM for forecasting). This is often used in time series forecasting or sequence modeling — not anomaly detection via autoencoder."
+   ]
   },
   {
    "cell_type": "code",
